<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/first_column"
        android:layout_weight="20"
        android:text="@string/type"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/second_column"
        android:layout_weight="20"
        android:text="@string/days"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/third_column"
        android:layout_weight="20"
        android:text="@string/time"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/fourth_column"
        android:layout_weight="20"
        android:text="@string/credit_hours"/>

    <Button
        android:id="@+id/fifth_column"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:textAlignment="center"
        android:text="@string/add"
        android:layout_marginStart="20dp" />


</LinearLayout>